--- a/.github/workflows/self-hosted-runner.yml
+++ b/.github/workflows/self-hosted-runner.yml
@@ -1,39 +1,44 @@
+name: build
+
 on:
   push:
-    branches:
-      - main
   workflow_dispatch:
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
-  local-build-job:
-    runs-on: self-hosted
+  build-and-push:
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Move Files
-        run: |
-          mkdir -p /tmp/GoMining-Bot
-          if [ -f .env ]; then
-            mv .env /tmp/GoMining-Bot/
-          fi
+    - name: 設定 Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    - name: 登入 GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Restore Files
-        run: |
-          if [ -f /tmp/GoMining-Bot/.env ]; then
-            mv /tmp/GoMining-Bot/.env .
-          fi
-          rm -rf /tmp/GoMining-Bot
-      
-      - name: Build Docker Container
-        run: docker compose build
+    - id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Restart Docker Container
-        run: |
-          docker compose down
-          docker compose up -d
-
-      - name: Clean Up Docker Images and Build Cache
-        run: |
-          docker image prune -f
-          docker builder prune -f
+    - name: build and push server
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha,scope=server
+        cache-to: type=gha,mode=max,scope=server
